# pve-cpp

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  vcpkg.json
include/pve/api/access/: PVETicket.hpp  PVEUser.hpp
include/pve/api/internal/: APIInterface.hpp  InternalUtility.hpp
include/pve/api/session/: PVESession.hpp
src/: CMakeLists.txt  Main.cpp
src/api/access/: PVETicket.cpp  PVEUser.cpp
src/api/internal/: InternalUtility.cpp
src/api/session/: PVESession.cpp
